--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,10 @@ name: React app deploy to surge
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -25,12 +28,7 @@ jobs:
       with:
         node-version: 12
   
- 
-    - name: Build React App
-      run: yarn build
-      
-    - name: Install Surge
-      run: npm install --global surge
-      
-    - name: Deploy to Surge
-      run: surge ./build nexttech-animation.surge.sh/ --token ${{ secrets.SURGE_TOKEN }}
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: install #will run 'yarn install' command
+    
