--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,11 @@ jobs:
       with:
         cmd: install #will run 'yarn install' command
     
+    - name: Build React App
+      run: yarn build
+      
+    - name: Install Surge
+      run: npm install --global surge
+      
+    - name: Deploy to Surge
+      run: surge ./build nexttech-animation.surge.sh/ --token ${{ secrets.SURGE_TOKEN }}
